--- a/templates/CountryPage.html
+++ b/templates/CountryPage.html
@@ -3,7 +3,7 @@
     <title> COUNTRY</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--Connecting Camila.html and style.css-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
   </head>
   <body>
     <section id="banner">
