--- a/templates/Homepage draft 1 (simone).html
+++ b/templates/Homepage draft 1 (simone).html
@@ -2,7 +2,7 @@
   <head>
     <style>
       body {
-        background-image: url();
+        background-image: url(static/aCountry.jpg);
         background-size: cover;
       }
       
